# mshr

./: CMakeLists.txt  ChangeLog  README.md  README.rst  mshr-config.cmake.in  release.conf  use-mshr.cmake
app/: mshr-surfacefile.cpp  mshrable.cpp
demo/python/: classic.py  csg-subdomains-2D.py  deathstar.py  extrude.py  failing.py  icecream.py  materials.py  propeller.py  remove_degenerate.py  simple-csg-3D.py
doc/: Doxyfile  generate_rst.py  get_icons.py
include/: PolyhedronFactory.h  dolfincsg.h  intersection_segments.h  mshr.h
include/dolfincsg/: CGALMeshBuilder.h  CSGCGALDomain2D.h  CSGCGALMeshGenerator2D.h  CSGCGALMeshGenerator3D.h  CSGGeometries3D.h  CSGGeometry.h  CSGMeshGenerator.h  CSGOperators.h  CSGPrimitive.h  CSGPrimitives2D.h  CSGPrimitives3D.h  GeometryToCGALConverter.h  PolyhedronFactory.h  PolyhedronUtils.h  cgal_csg3d.h  compute_normal.h  intersection_segments.h  self_intersect.h
include/mshr/: CGALMeshBuilder.h  CSGCGALDomain2D.h  CSGCGALDomain3D.h  CSGCGALMeshGenerator2D.h  CSGCGALMeshGenerator3D.h  CSGGeometries3D.h  CSGGeometry.h  CSGMeshGenerator.h  CSGOperators.h  CSGPrimitive.h  CSGPrimitives2D.h  CSGPrimitives3D.h  DolfinMeshUtils.h  GeometryToCGALConverter.h  GlobalInitializer.h  HoleTriangulate.h  MeshGenerator.h  Meshes.h  OFFFileReader.h  PolyhedronFactory.h  PolyhedronUtils.h  STLFileReader.h  SurfaceConsistency.h  SurfaceReconstruction.h  TetgenFileWriter.h  TetgenMeshGenerator3D.h  VTPFileReader.h  cgal_csg3d.h  compute_normal.h  intersection_segments.h  self_intersect.h
sandbox/: unit_sphere_triangulation.py
src/: CSGCGALDomain2D.cpp  CSGCGALDomain3D.cpp  CSGCGALMeshGenerator2D.cpp  CSGCGALMeshGenerator3D.cpp  CSGGeometries3D.cpp  CSGGeometry.cpp  CSGMeshGenerator.cpp  CSGOperators.cpp  CSGPrimitives2D.cpp  CSGPrimitives3D.cpp  DolfinMeshUtils.cpp  GeometryToCGALConverter.cpp  GlobalInitializer.cpp  HoleTriangulate.cpp  MeshGenerator.cpp  Meshes.cpp  OFFFileReader.cpp  Point3FuzzyStrictlyLess.h  Polyhedral_multicomponent_mesh_domain_with_features_3.h  PolyhedronUtils.cpp  Polyhedron_utils.h  STLFileReader.cpp  SurfaceConsistency.cpp  SurfaceReconstruction.cpp  TetgenFileWriter.cpp  TetgenMeshGenerator3D.cpp  VTPFileReader.cpp  make_multicomponent_mesh_3.h  meshclean.h  test.cpp  triangulate_polyhedron.h  triangulation_refinement.h
swig/: CMakeLists.txt  dolfincsg.i  mshr.i
test/: CMakeLists.txt  degenerate_removal.py  dummy.py  test-csg.py  test.cpp  test2.cpp  test3D.cpp
